<resources>
    <string name="app_name">框架</string>
    <string name="login">登录测试</string>
    <string name="user_name">登录名称</string>
    <string name="password">登录密码</string>
    <string name="loadImage">加载图片</string>
    <string name="function">功能模块</string>
    <string name="pay">支付模块</string>
    <string name="alipay">支付宝</string>
    <string name="wechatpay">微信支付</string>
    <string name="unionpay">银联支付</string>
    <string name="IM">IM模块</string>
    <string name="push">推送模块</string>
    <string name="leanCloud">LeanCloud</string>

</resources>
