<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/il_title"
        layout="@layout/activity_title"/>
    <Button
        android:id="@+id/btn_alipay"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="#007979"
        android:textColor="#fff"
        android:textSize="12sp"
        android:text="@string/alipay" />
    <Button
        android:id="@+id/btn_wechatpay"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="#007979"
        android:textColor="#fff"
        android:textSize="12sp"
        android:text="@string/wechatpay" />
    <Button
        android:id="@+id/btn_unionpay"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="#007979"
        android:textColor="#fff"
        android:textSize="12sp"
        android:text="@string/unionpay" />
</LinearLayout>