<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lanye.androidframe.MainActivity">


    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="#007979"
        android:textColor="#fff"
        android:textSize="12sp"
        android:text="@string/login" />
    <Button
        android:id="@+id/btn_load_image"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="#007979"
        android:textColor="#fff"
        android:textSize="12sp"
        android:text="@string/loadImage" />
    <Button
        android:id="@+id/btn_function_module"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="#007979"
        android:textColor="#fff"
        android:textSize="12sp"
        android:text="@string/function" />

</LinearLayout>
