<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/il_title"
        layout="@layout/activity_title"/>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_marginLeft="15dp"
            android:textSize="12sp"
            />
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="请输入用户名"
            android:textColorHint="#aaa"
            android:textSize="12sp"
            android:textColor="#999"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e2e2e2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginLeft="15dp"
            android:textSize="12sp"
            />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="请输入密码"
            android:textColorHint="#aaa"
            android:textSize="12sp"
            android:textColor="#999"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:text="@string/login"
        android:layout_height="36dp"
        android:background="#007979"
        android:textColor="#fff"
        android:textSize="12sp"
        />
</LinearLayout>